# Th0r_Freya

./: Makefile  README.md
Freya/: AppDelegate.h  Info.plist  SettingsViewController.h  SettingsViewController.m  ViewController.h  ViewController.m  main.m
Freya.xcodeproj/: project.pbxproj
Freya.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Freya/Base.lproj/: Main copy 2.storyboard  Main copy.storyboard  Main.storyboard
Freya/bootstrap/: ent.tar  gangZip.tar  restoreUtils.tar  restoretools.tar  rmDevice.tar  rsync.tar  snappy.tar  uicache5s.tar  uicacheDevice.tar
Freya/deb22/: cydia.deb  libssl1.1.1_1.1.1n-1_iphoneos-arm.deb  libzstd1_1.4.8-1_iphoneos-arm.deb  openssh-global-listener_8.4-2_iphoneos-arm.deb  openssh-local-listener_8.4-3_iphoneos-arm.deb  openssh-server_8.4-2_iphoneos-arm.deb  openssl_1.1.1i-1_iphoneos-arm.deb  sudo_1.8.27-4_iphoneos-arm.deb
Freya/headers/: CSCommon.h  IOReturn.h  IOTypes.h  archive.h  asn1.c  common.h  img4.c  img4.h  jelbrekLib.h  kern_control.h  kernel_structs.h  libproc.h  route.h
Freya/headers/libhelper/: README.md  TODO  kext_notes.txt  meson.build
Freya/headers/libhelper/include/libhelper-dyld/: dyld.h
Freya/headers/libhelper/include/libhelper-lzfse/: lzfse.h
Freya/headers/libhelper/include/libhelper-macho/: macho.h
Freya/headers/libhelper/src/: file.c
Freya/headers/libhelper/src/dyld/: dyld.c
Freya/headers/libhelper/src/lzfse/: lzfse_decode_base.c
Freya/headers/libhelper/src/lzss/: lzss.c
Freya/headers/libhelper/src/macho/: macho-segment.c  macho-symbol.c
Freya/headers/libhelper/tests/: checkra1n_extract_demo.c  dyld_cache.c  func_starts.c  meson.build
Freya/headers/libhelper/tools/: libhelper_version.c
Freya/img4helper/: meson.build
Freya/img4helper/libhelper/: .gitignore  kext_notes.txt
Freya/img4helper/libhelper/include/libhelper-img4/: sep.h
Freya/img4helper/libhelper/include/libhelper-macho/: macho-header-const.h
Freya/img4helper/libhelper/src/: hslist.c
Freya/img4helper/libhelper/src/img4/: sep.c
Freya/img4helper/libhelper/src/lzfse/: lzfse_decode.c  lzfse_encode.c  lzfse_fse.c  lzvn_decode_base.c
Freya/img4helper/libhelper/src/macho/: macho-command.c
Freya/img4helper/libhelper/tests/: macho-ll-lib.c  macho-ll.c
Freya/img4helper/libhelper/tools/: README  libhelper_version.c  macho_toolset.c  meson.build
Freya/img4helper/src/: asn1.h  img4.c  img4.h  main.c  meson.build
Freya/libhelper/src/: hstring.c  libhelper.c  meson.build  strutils.c
Freya/libhelper/src/lzfse/: lzfse_decode.c  lzfse_encode.c  lzfse_encode_base.c  lzvn_encode_base.c
Freya/libhelper/src/macho/: macho.c
Freya/mylib/: CRACKPP.cpp  CRACKPP.hpp  IOSurface_lib.c  k_offsets.c  k_offsets.h  k_utils.c  kapi.h  kapi_memory.c  user_kernel_alloc.c  user_kernel_alloc.h  version.h
Freya/post-exploit/: bootstrap.swift  cutils.c  cutils.h  electra.swift
Freya/utils/: FreyaRemove.h  FreyaRemove.m  KernelUtils.c  KernelUtils.h  chimeraRemove.h  chimeraRemove.m  cpBootHash.h  electraRemove.h  electraRemove.m  insert_dylib.c  post_exploit.m  shenanigans.m  undecimusRemove.h  undecimusRemove.m  utils.h  utilsZS.h  utilsZS.m
TH0R/: AppDelegate.m  Info.plist  LaunchScreen.storyboard  SettingsViewController.h  SettingsViewController.m  ViewController.h  ViewController.m  binbag.tar
TH0R.xcodeproj/: project.pbxproj
TH0R.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TH0R/Base.lproj/: Main.storyboard
TH0R/DEBS/: Release  cydia-lproj.deb  jailbreak-resources_1.0~rc1_iphoneos-arm.deb  me.chr0nict.comex.substitute_1.0_iphoneos-arm.deb  res.deb
TH0R/DEBSfuky/: apt-key_1.8.2.2-1_iphoneos-arm.deb  base_1-5_iphoneos-arm.deb  bash_5.0.3-2_iphoneos-arm.deb  berkeleydb_6.2.32-1_iphoneos-arm.deb  bzip2_1.0.6-1_iphoneos-arm.deb  ca-certificates_0.0.2_all.deb  coreutils-bin_8.31-1_iphoneos-arm.deb  coreutils_8.31-1_iphoneos-arm.deb  cydia-lproj_1.1.32~b1_iphoneos-arm.deb  cydia.deb  cydia_1.1.37_iphoneos-arm.deb  cydia_1.1.37_iphoneos-armgood.deb  darwintools_1.1-1_iphoneos-arm.deb  debianutils_4.8.6-1_iphoneos-arm.deb  developer-cmds_48-1_iphoneos-arm.deb  diffutils_3.6-1_iphoneos-arm.deb  diskdev-cmds_593.221.1-1_iphoneos-arm.deb  essential_0-2_iphoneos-arm.deb  essential_99.0_iphoneos-arm.deb  file_5.35-2_iphoneos-arm.deb  findutils_4.6.0-2_iphoneos-arm.deb  gnutls_3.5.19-1_iphoneos-arm.deb  grep_3.1-1_iphoneos-arm.deb  gzip_1.9-1_iphoneos-arm.deb  jbctl_0.2.3-1_iphoneos-arm.deb  ldid_2.1.5-1_iphoneos-arm.deb  ldid_2_2.1.1+elucubratus1_iphoneos-arm.deb  libapt-pkg5.0_1.8.2.2-1_iphoneos-arm.deb  libapt_1.8.2.2-1_iphoneos-arm.deb  libgpg-error_1.32-1_iphoneos-arm.deb  libidn2_6.1.2-1_iphoneos-arm.deb  libksba_1.3.5-1_iphoneos-arm.deb  libplist++-dev_2.2.1-1_iphoneos-arm.deb  libplist++3_2.2.1-1_iphoneos-arm.deb  libplist-dev_2.2.1-1_iphoneos-arm.deb  libplist-utils_2.2.1-1_iphoneos-arm.deb  libplist3_2.2.1-2_iphoneos-arm.deb  libplist_2.0.0-2_iphoneos-arm.deb  libplist_2.2.1-3_iphoneos-arm.deb  libssl1.0_1.0.2s-1_iphoneos-arm.deb  (+30 more)
TH0R/bootstrap/: basebinaries.tar  default.ent  ldrestartcheck.tar  ldrstartsex.tar  newplutil.tar  plutil.tar  uicache.tar
TH0R/headers/: IOKitLib.h  archive_entry.h  common.h  iokit.h  mac_policy.h  mach_vm.h  proc_info.h  reboot.h
TH0R/utils/: KernelUtils.c  KernelUtils.h  cpBootHash.c  insert_dylib.h  post_exploit.m  shenanigans.h  shenanigans.m  utils.c  utilsZS.h  utilsZS.m
extra tar junk/: cydiafix.tar  ldrestartxs.tar  libsex.tar  specialLdrestart.tar
extra tar junk/zuesstrapNutzSigned/: .cydia_no_stash
zuesstrapNutzSigned/sbin/: ifconfig  md5  nologin  quotacheck
(+1037 files in other folders)
